gitops/clusters/oci-a1/vote/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vote
  annotations:
    argocd.argoproj.io/sync-wave: '-40'
