gitops/clusters/oci-a1/vote/vote-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-admin
  namespace: vote
spec:
  selector:
    app.kubernetes.io/name: vote-admin
    app.kubernetes.io/part-of: vote
  ports:
  - name: http
    port: 3001
    targetPort: http
