gitops/clusters/oci-a1/vote/vote-authz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-authz
  namespace: vote
spec:
  selector:
    app.kubernetes.io/name: vote-authz
    app.kubernetes.io/part-of: vote
  ports:
  - name: http
    port: 3005
    targetPort: http
